# YumuStudio

./: AGENTS.md  CMakeLists.txt  README.md
scripts/: build_whisper_no_vulkan.ps1  make_portable.bat  rebuild_all.ps1  rebuild_whisper_vulkan.ps1
src/: appconfig.h  exportdialog.cpp  exportdialog.h  ffmpegexporter.cpp  mainwindow.cpp  mainwindow.h  settingsdialog.h  subtitleeditor.cpp  subtitleeditor.h  subtitlemodel.cpp  translationengine.cpp  translationengine.h  translationpreviewdialog.cpp  translationpreviewdialog.h  videopreview.cpp  videopreview.h  waveformwidget.cpp  waveformwidget.h  whisperengine.cpp  whisperengine.h
yumu_studio_win_v0.1.8.7/: README.md
yumu_studio_win_v0.1.8.7/scripts/: make_portable.bat
yumu_studio_win_v0.1.8.7/src/: appconfig.cpp  exportdialog.cpp  ffmpegexporter.cpp  ffmpegexporter.h  main.cpp  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  stylepreviewwidget.cpp  stylepreviewwidget.h  subtitleeditor.cpp  subtitlemodel.h  translationengine.cpp  videopreview.cpp  videopreview.h  waveformwidget.cpp  waveformwidget.h
